<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutAcercaDe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AcercaDe">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoAcercaDe"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/textoAcercaDe"
        app:titleCentered="true"
        app:navigationIcon="@drawable/arrow_back"/>

    <TextView
        android:id="@+id/textoAplicacionRealizadaPor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textoAplicaciónRealizadaPor"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textoDanielALonso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textoDanielAlonso"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textoNataliaMoreno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textoNataliaMoreno"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textoJuanaPaulaSierra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textoJuanaPaulaSierra"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"/>

</LinearLayout>