<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutNuevaTarea"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityNuevaTarea">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoNuevaTarea"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:title="@string/textoNuevaTarea"
        app:titleCentered="true"
        app:navigationIcon="@drawable/arrow_back"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIid"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoID"
        app:startIconDrawable="@drawable/key"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/idTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TInombreTarea"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoNombreTarea"
        app:startIconDrawable="@drawable/info"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/nombreTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TImoduloTarea"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoNombreModulo"
        app:startIconDrawable="@drawable/modulo"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/moduloTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIfecha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoFechaEntrega"
        app:startIconDrawable="@drawable/calendar">

        <EditText
            android:id="@+id/fechaEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonEligeFecha"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/textoEligeFecha"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonRegistrarTarea"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/textoREGISTRAR"/>

</LinearLayout>