<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutSignIn"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoSignIn"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="50dp"
        app:title="@string/textoRegistro"
        app:titleCentered="true"
        app:navigationIcon="@drawable/arrow_back"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNombreSignIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoNombre"
        app:startIconDrawable="@drawable/user"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/editTextNombreSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCorreoSignIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoCorreo"
        app:startIconDrawable="@drawable/mail"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/editTextCorreoSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputContrasenaSignIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/editTextContrasenaSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmarContrasenaSignIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/textoConfirmarContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/editTextConfirmarContrasenaSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonRegistrarseSignIn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/textoRegistrarse"/>

</LinearLayout>