<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutLogin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textoBienvenidaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/textoBienvenida"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/purple_500"/>

    <TextView
        android:id="@+id/textoIniciarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/textoIniciarSesion"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNombreLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoNombre"
        app:startIconDrawable="@drawable/user"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/editTextNombreLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputContrasenaLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/textoContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/editTextContrasenaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonIniciarSesionLogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textoIniciarSesion"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonRegistrarseLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:text="@string/textoRegistrarse"/>
</LinearLayout>