<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutPerfil"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoPerfil"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/textoPerfil"
        app:titleCentered="true"
        app:navigationIcon="@drawable/arrow_back"/>

    <ImageView
        android:id="@+id/imagenPerfil"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/encabezadoPerfil"
        android:layout_marginTop="30dp"
        android:src="@drawable/account_circle"/>

    <TextView
        android:id="@+id/textViewNombrePerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagenPerfil"
        android:text="@string/textoNombre"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textViewCorreoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewNombrePerfil"
        android:layout_marginTop="20dp"
        android:text="@string/textoCorreo"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:src="@drawable/edit"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/botonCambiarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toLeftOf="@id/botonEditarPerfil"
        android:text="@string/textoContrasena"
        app:icon="@drawable/lock"
        app:shapeAppearanceOverlay="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon" />

</RelativeLayout>