<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutNuevoModulo"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityNuevoModulo">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoNuevoModulo"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:title="@string/textoNuevoModulo"
        app:titleCentered="true"
        app:navigationIcon="@drawable/arrow_back"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TInombreModulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/textoNombreModulo"
            app:startIconDrawable="@drawable/modulo"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/nombreModulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIciclo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/textoCiclo"
            app:startIconDrawable="@drawable/info"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/ciclo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonRegistrarModulo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/textoREGISTRAR"/>

</LinearLayout>