<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutEditarPerfil"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfil">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoEditarPerfil"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/textoEditarPerfil"
        app:titleCentered="true"
        app:navigationIcon="@drawable/arrow_back"/>

    <ImageView
        android:id="@+id/imagenEditarPerfil"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/encabezadoEditarPerfil"
        android:layout_marginTop="30dp"
        android:src="@drawable/account_circle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCorreoEditarPerfil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagenEditarPerfil"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/textoCorreo"
        app:startIconDrawable="@drawable/mail"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/editTextCorreoEditarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputContrasenaEditarPerfil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputCorreoEditarPerfil"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/textoCambiarContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/editTextContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonCambiosEditarPerfil"
        style="@style/FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/done"
        app:maxImageSize="30dp"/>

</RelativeLayout>