<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/contenedorCard"
            android:layout_width="320dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true">
            <!--  app:cardElevation="10dp"
            app:cardCornerRadius="20dp" -->

            <LinearLayout
                android:id="@+id/contenedorDatosTareas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F2F4FF "
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/nombreTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/textoNombreTarea"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"/>

                <View
                    android:id="@+id/viewTareas"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/moduloTareas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/textoNombreModulo"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/fechaEntregaTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/textoFechaEntrega"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textColor="@color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botonEliminarTarea"
                    style="@style/BotonBorrar"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    app:icon="@drawable/delete"
                    app:iconGravity="top"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>