<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutCambiarContrasena"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambioContrasena">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoCambiarContrasena"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/textoCambiarContrasena"
        app:titleCentered="true"
        app:navigationIcon="@drawable/arrow_back"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputContrasenaCambiarContrasena"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/encabezadoCambiarContrasena"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/textoContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/editTextContrasenaCambiarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNuevaContrasenaCambiarContrasena"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputContrasenaCambiarContrasena"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/textoNuevaContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/editTextNuevaContrasenaCambiarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmarContrasenaCambiarContrasena"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputNuevaContrasenaCambiarContrasena"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/textoConfirmarContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/editTextConfirmarContrasenaCambiarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonCambiosCambiarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/done"
        app:maxImageSize="30dp" />

</RelativeLayout>